<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">River Watch</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_settings">Action settings</string>

    <!-- <string name="app_name">River Watch</string> -->
    <string name="capture_image">Capture Image</string>
    <string name="select_location">Select Location</string>
    <string name="description_labeltitle"> Enter Image Description </string>
    <string name="tag_labeltitle"> Select Image Tags </string>
    <string name="submit"> Submit </string>
    <string name="noPhotoAdded">No photo added</string>
    <string name="noLocationRecorded">No location recorded</string>
    <string name="noDescriptionAdded">No description added</string>
    <string name="noContactDetailsAdded">No contact details added</string>
    <string name="contactDetailsAdded">Contact details added</string>
    <string name="submit_pollution_event">Submit Incident</string>
    <string name="view_submission_gallery">View Incidents</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="description_title">Describe Incident</string>
    <string name="noDescriptionEntered">No Description Entered</string>
    <string name="please_select_a_image">Please select an Image</string>
    <string name="pleaseEnterDescription">Please enter a description of the problem</string>
    <string name="pleaseChooseTags">Please choose image tag(s) </string>
    <string name="pleaseEnterAddress">Please enter an address</string>
    <string name="nocoordinates">No Coordinates (Lat,Lon) found</string>
    <string name="gps_message_submission">Submitting a pollution event uses GPS to tag your location. However your GPS seems to be disabled, do you want to
		enable it?</string>
    <string name="gps_message">Your GPS seems to be disabled, do you want to
		enable it?</string>
    <string name="no_internet_message">No internet connection detected, do you want to
		enable it?</string>
    <string name="positive_button_title">Yes</string>
    <string name="negative_button_title">No</string>
    <string name="gps_no_location_message">Cannot convert geo coordinates to a valid address. Please continue</string>
    <string name="locationTitle">Record Location</string>
    <string name="userAddress">Address</string>
    <string name="errorInReverseGeoCoding">Unable to convert location coordinates to address</string>
    <string name="thisIsTheLocationFound">This is the location found</string>
    <string name="newLocationFound">New location found&#8230;</string>
    <string name="wouldYouLikeToUpdate">Would you like to update your position?</string>
    <string name="noAddressFound">No address found at location:</string>
    <string name="wouldYouLikeToUpdateStill">Would you like to update your location?</string>
    <string name="errorInGeoCoding">Unable to convert address to location coordinates</string>
    <string name="pleaseCompleteAllSteps">Please complete all steps before submitting your incident</string>
    <string name="select_image_title">Select Image</string>
    <string name="preview_title">Preview Incident</string>
    <string name="preview_image">Image</string>
    <string name="preview_location">Location</string>
    <string name="preview_descriptiontitle"> Description</string>
    <string name="preview_description"> Description</string>
    <string name="preview_imagetag"> Image Tag </string>
    <string name="preview_imagetagtitle"> Tag </string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="no_preview_available">No Preview Available</string>
    <string name="select_image_from_gallery">Select Image From Gallery</string>
    <string name="take_picture_title">Capture Image</string>
    <string name="incident_view_gallery_title">Gallery</string>
    <string name="incident_view_grid_title">Incident Gallery </string>
    <string name="failed_camera_please_try_again">Failed to save image, please try again</string>
    <string name="failed_to_connect_to_camera_message">Failed to open camera. Please try again later</string>
    <string name="geocoordinates_text">Geocoordinate location:</string>
    <string name="success_submission_msg">You have successfully submitted a river pollution incident.</string>
    <string name="failure_submission_msg">Your incident submission was unsuccessful. Please try again later.</string>
    <string name="failure_load_images_msg">Failed to obtain river pollution images. Please try again later.</string>
    <string name="sending_incident_title">Incident Submission</string>
    <string name="sending_incident_msg">Submitting your river pollution incident&#8230;</string>
    <string name="sending_incident_msg_please_wait">Please wait</string>
    <string name="loading_images_title">Loading River Pollution Images</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="main_screen_image"> Main Image </string>

    <!-- NEW TO BLUETOOTH STRINGS -->

    <string name="bluno_connect">Connect to Bluno</string>
    <string name="results_title">Results</string>
    <string name="history_title">History</string>
    <string name="start_title">Start</string>
    <string name="discard_data">Discard</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="bluetooth_title">Bluetooth</string>

</resources>
