<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:orientation="vertical"
    tools:context=".MainActivity" >
 <!--   android:background="@drawable/tomassobek" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.28"
            android:padding="10dp" >

            <TextView
                android:id="@+id/connection_updates"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/White"
                android:padding="30dp"
                android:text="Press the connect button to start."
                android:textSize="30sp" />
        </FrameLayout>

        <Button
            android:id="@+id/scan_button"
            style="@style/riverWatchButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluno_connect"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/connect_button"
            style="@style/riverWatchButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_connect" />

        <Button
            android:id="@+id/start_button"
            style="@style/riverWatchButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< Updated upstream
            android:text="@string/start_title" />
=======
            android:text="@string/start_title"
            android:visibility="gone"
            android:layout_margin="15dp" />
>>>>>>> Stashed changes

        <Button
            android:id="@+id/history_button"
            style="@style/riverWatchButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            android:layout_margin="15dp" />
    </LinearLayout>

</FrameLayout>